Adding promocodes tabs

--- a/src/components/layout/MainPage/index.html
+++ b/src/components/layout/MainPage/index.html
@@ -1,11 +1,16 @@
 <template>
   <div>
     <nav class="nav-genshin">
-      <router-link class="nav-link" :to="{ name: 'banners' }">
-        <b-button pill variant="info" class="nav-button">
-          Редактирование Баннеров
-        </b-button>
-      </router-link>
+        <router-link class="nav-link" :to="{ name: 'banners' }">
+            <b-button pill variant="info" class="nav-button">
+                Баннера
+            </b-button>
+        </router-link>
+        <router-link class="nav-link" :to="{ name: 'promocodes' }">
+            <b-button pill variant="info" class="nav-button">
+                Промокоды
+            </b-button>
+        </router-link>
       <!-- Добавьте другие вкладки по аналогии -->
     </nav>
     <router-view />
