--- a/src/components/layout/AdminTabs/BannersEdit/index.html
+++ b/src/components/layout/AdminTabs/BannersEdit/index.html
@@ -75,7 +75,7 @@
         </div>
       </b-form-group>
 
-      <b-button type="submit" variant="success">Save Changes</b-button>
+      <b-button type="submit" variant="success">Сохранить изменения</b-button>
     </b-form>
   </div>
 </template>
