--- a/src/components/layout/AdminTabs/PromocodesEdit/index.html
+++ b/src/components/layout/AdminTabs/PromocodesEdit/index.html
@@ -30,7 +30,7 @@
             <b-form-input required v-model="formData.count" id="promocode" type="number"></b-form-input>
         </b-form-group>
 
-      <b-button type="submit" variant="success">Save Changes</b-button>
+      <b-button type="submit" variant="success">Сохранить изменения</b-button>
     </b-form>
   </div>
 </template>
