--- a/src/components/layout/MainPage/index.html
+++ b/src/components/layout/MainPage/index.html
@@ -11,6 +11,11 @@
                 Промокоды
             </b-button>
         </router-link>
+        <router-link class="nav-link" :to="{ name: 'advertisements' }">
+            <b-button pill variant="info" class="nav-button">
+                Реклама
+            </b-button>
+        </router-link>
       <!-- Добавьте другие вкладки по аналогии -->
     </nav>
     <router-view />
