--- a/src/components/layout/AdminTabs/AdvertisementsList/index.html
+++ b/src/components/layout/AdminTabs/AdvertisementsList/index.html
@@ -12,7 +12,7 @@
                     <b-card class="advertisement-card">
                         <b-card-title class="advertisement-card-title">{{ truncateText(advertisement.message, 80) }}</b-card-title>
                         <b-card-text class="advertisement-card-text">
-                            <p v-if="advertisement.imageLink"><a target="_blank" :href="advertisement.imageLink">Ссылка на изображение</a></p>
+                            <a v-if="Boolean(advertisement.imageLink)" target="_blank" :href="advertisement.imageLink">Ссылка на изображение</a>
                             <p>Группы: {{ advertisement.groups ? 'Да' : 'Нет' }}</p>
                             <p>Пользователи: {{ advertisement.users ? 'Да' : 'Нет' }}</p>
                             <p>Отправлено: {{ advertisement.delivered ? 'Да' : 'Нет' }}</p>
