--- a/src/components/layout/AdminTabs/AdvertisementsList/index.html
+++ b/src/components/layout/AdminTabs/AdvertisementsList/index.html
@@ -12,9 +12,9 @@
                     <b-card class="advertisement-card">
                         <b-card-title class="advertisement-card-title">{{ truncateText(advertisement.message, 70) }}</b-card-title>
                         <b-card-text class="advertisement-card-text">
-                            <div v-if="Boolean(advertisement.imageLink)" >
+                            <p v-if="Boolean(advertisement.imageLink)" >
                                 <a target="_blank" :href="advertisement.imageLink">Ссылка на изображение</a>
-                            </div>
+                            </p>
                             <p>Группы: {{ advertisement.groups ? 'Да' : 'Нет' }}</p>
                             <p>Пользователи: {{ advertisement.users ? 'Да' : 'Нет' }}</p>
                             <p>Отправлено: {{ advertisement.delivered ? 'Да' : 'Нет' }}</p>
