--- a/src/components/layout/AdminTabs/AdvertisementsList/index.html
+++ b/src/components/layout/AdminTabs/AdvertisementsList/index.html
@@ -1,6 +1,13 @@
 <template>
     <div class="advertisements-view">
         <b-container>
+
+            <div class="alert alert-warning" role="alert">
+                <p>
+                    Если возникли проблемы с отображением элементов на странице - отключите AddBlocker.
+                </p>
+            </div>
+
             <h2 class="genshin-heading">Управление рекламными постами</h2>
 
             <div class="mb-3">
