--- a/src/components/layout/AdminTabs/PromocodesList/index.css
+++ b/src/components/layout/AdminTabs/PromocodesList/index.css
@@ -1,46 +1,52 @@
-/* Стили для контейнера промокодов */
 .promocodes-view {
     padding: 20px;
     background-color: #2d2d2d;
     color: #fff;
 }
 
-/* Стили для карточек с промокодами */
 .promocode-card {
     margin-bottom: 20px;
     background-color: #3b3d40;
     border: none;
 }
 
-/* Стили для заголовка карточки с промокодами */
 .promocode-card-title {
     background-color: #2d2d2d;
-    border-bottom: 1px solid #6c757d;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
     color: #fff;
+    font-weight: bold;
+    padding: 10px;
 }
 
-/* Стили для текстовой части карточки с промокодами */
 .promocode-card-text {
     padding: 20px;
 }
 
-/* Стили для кнопок редактирования и удаления промокода */
-.promocode-button {
-    margin-right: 10px;
-    background-color: #2196F3;
-    color: #fff;
-    border: none;
+.promocode-details-list {
+    list-style: none;
+    padding: 0;
+    color: #d3d3d3;
 }
 
-/* Стили для кнопки удаления промокода */
+.promocode-details-list li {
+    margin-bottom: 5px;
+}
+
+.promocode-buttons {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.promocode-button {
+    margin-right: 10px;
+}
+
 .promocode-button-delete {
     background-color: #f44336;
 }
+
 .genshin-heading {
-    font-size: 24px; /* Размер шрифта */
-    margin-bottom: 20px; /* Отступ снизу */
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #fff;
 }
